src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>IF(ISBLANK(CampaignId),&quot;Sales Generated&quot;,TEXT(Campaign.Type))</formula>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Touch_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Touch Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
    </fields>
    <fields>
        <fullName>Last_Touch_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Touch Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Last Touch Campaign)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>