src/objects/Opportunity/fields/AE_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Accepted_Date__c</fullName>
    <label>AE Accepted Date</label>
    <type>Date</type>
</CustomField>