src/objects/Opportunity/fields/AE_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Notes__c</fullName>
    <inlineHelpText>Notes from the AE regarding the opportunity. Some of these are still notes from the BDR on older opportunities when there was no BDR Notes field.</inlineHelpText>
    <label>AE Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>