src/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>MRR__c*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Revenue Rate</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>