src/objects/Opportunity/fields/BDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>BDR_Notes__c</fullName>
    <inlineHelpText>Notes from the BDR during the lead process</inlineHelpText>
    <label>BDR Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>