src/objects/Opportunity/fields/Budget_Money__c.field-meta.xml
<CustomField>
    <fullName>Budget_Money__c</fullName>
    <inlineHelpText>Yes or No on whether or not the company has the budget for our product.</inlineHelpText>
    <label>Budget/Money</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>