src/objects/Opportunity/fields/Consequence__c.field-meta.xml
<CustomField>
    <fullName>Consequence__c</fullName>
    <inlineHelpText>Direct result(s) on the company from the Primary Pain.</inlineHelpText>
    <label>Consequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>