src/objects/Opportunity/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <inlineHelpText>What is the expiration date (if any) for the current software the company is using.</inlineHelpText>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>