src/objects/Opportunity/fields/Copesan_Partner__c.field-meta.xml
<CustomField>
    <fullName>Copesan_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the company is a partner with Copesan</inlineHelpText>
    <label>Copesan Partner</label>
    <type>Checkbox</type>
</CustomField>