src/objects/Opportunity/fields/Credited_BDR__c.field-meta.xml
<CustomField>
    <fullName>Credited_BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>BDR who scheduled the demo and converted the lead to an opportunity</inlineHelpText>
    <label>Credited BDR</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or the user you are selecting is not a BDR.</errorMessage>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00Ef4000000LsOf</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>