src/objects/Opportunity/fields/Current_Marketing_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Marketing_Company__c</fullName>
    <inlineHelpText>Mapped form converted Lead.</inlineHelpText>
    <label>Current Marketing Company</label>
    <type>TextArea</type>
</CustomField>