src/objects/Opportunity/fields/Current_PestRoutes_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_PestRoutes_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Lobster BDRs/AEs to answer for the Lobster Implementation team</inlineHelpText>
    <label>Current PestRoutes Customer</label>
    <type>Checkbox</type>
</CustomField>