src/objects/Opportunity/fields/Current_Software__c.field-meta.xml
<CustomField>
    <fullName>Current_Software__c</fullName>
    <inlineHelpText>What software is the company currently using if any?</inlineHelpText>
    <label>Current Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;K Systems</fullName>
            </value>
            <value>
                <fullName>Briostack</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Fieldworks HQ</fullName>
            </value>
            <value>
                <fullName>Gorilladesk</fullName>
            </value>
            <value>
                <fullName>HouseCallPro</fullName>
            </value>
            <value>
                <fullName>PestPac</fullName>
            </value>
            <value>
                <fullName>PestRoutes</fullName>
            </value>
            <value>
                <fullName>Pocomos</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>RDF Software</fullName>
            </value>
            <value>
                <fullName>RealGreen</fullName>
            </value>
            <value>
                <fullName>Service Auto Pilot</fullName>
            </value>
            <value>
                <fullName>ServicePro</fullName>
            </value>
            <value>
                <fullName>ServSuite</fullName>
            </value>
            <value>
                <fullName>SmartService</fullName>
            </value>
            <value>
                <fullName>SPCS</fullName>
            </value>
            <value>
                <fullName>WorkWave</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>