src/objects/Opportunity/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <inlineHelpText>Member Service? Client Perk?</inlineHelpText>
    <label>Discount Reason</label>
    <type>TextArea</type>
</CustomField>