src/objects/Opportunity/fields/First_Expected_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Expected_Invoice_Date__c</fullName>
    <inlineHelpText>Use this only when the customer is receiving 1 or months free. Mark down the estimated date you expect the customer to first receive an invoice after their free period is up.</inlineHelpText>
    <label>First Expected Invoice Date</label>
    <type>Date</type>
</CustomField>