src/objects/Opportunity/fields/Free_Period_Approved__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_Approved__c</fullName>
    <inlineHelpText>If the customer is getting 1 or more months for free in their contract, please notate that here.</inlineHelpText>
    <label>Free Period Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>