src/objects/Opportunity/fields/Giveaway_Reason__c.field-meta.xml
<CustomField>
    <fullName>Giveaway_Reason__c</fullName>
    <label>Giveaway Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close a PestRoutes Sales</fullName>
            </value>
            <value>
                <fullName>Maintain an Existing PestRoutes Relationship</fullName>
            </value>
            <value>
                <fullName>Good Candidate for Future Upsells</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>