src/objects/Opportunity/fields/Growth_Goals__c.field-meta.xml
<CustomField>
    <fullName>Growth_Goals__c</fullName>
    <inlineHelpText>Mapped form converted Lead.</inlineHelpText>
    <label>Growth Goals</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>