src/objects/Opportunity/fields/Handoff_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Call_Date_Time__c</fullName>
    <inlineHelpText>Date and time of hand off call. Should not be more than 48 business hours after closed won date.</inlineHelpText>
    <label>Handoff Call Date/Time</label>
    <type>DateTime</type>
</CustomField>