src/objects/Opportunity/fields/HIST_Lobster_ID__c.field-meta.xml
<CustomField>
    <fullName>HIST_Lobster_ID__c</fullName>
    <description>This pulls in ID from Lobster Salesforce Instance</description>
    <externalId>true</externalId>
    <label>HIST-Lobster-ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>