src/objects/Opportunity/fields/Historical_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Historical_Record_Type__c</fullName>
    <inlineHelpText>Denotes which record type the historical Lobster Opportunity had.</inlineHelpText>
    <label>Historical Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Retention Proposal Process</fullName>
            </value>
            <value>
                <fullName>Email Campaign Proposal Process</fullName>
            </value>
            <value>
                <fullName>Generic Proposal</fullName>
            </value>
            <value>
                <fullName>Project Quote Process</fullName>
            </value>
            <value>
                <fullName>SEM Proposal Process</fullName>
            </value>
            <value>
                <fullName>Subscription Proposal Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>