src/objects/Opportunity/fields/hs_analytics_source__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source__c</fullName>
    <label>Original Source</label>
    <length>155</length>
    <type>Text</type>
</CustomField>