src/objects/Opportunity/fields/Implementation_created__c.field-meta.xml
<CustomField>
    <fullName>Implementation_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped once opportunity record has a related implementation</description>
    <label>Implementation created</label>
    <type>Checkbox</type>
</CustomField>