src/objects/Opportunity/fields/In_Month_Bookings__c.field-meta.xml
<CustomField>
    <fullName>In_Month_Bookings__c</fullName>
    <formula>IF(AND( 
MONTH(DATEVALUE(CreatedDate)) == MONTH(CloseDate), 
YEAR(DATEVALUE(CreatedDate)) == YEAR(CloseDate) 
),&quot;Intra Period&quot;,&quot;Pipeline&quot;)</formula>
    <label>In Month Bookings</label>
    <type>Text</type>
</CustomField>