src/objects/Opportunity/fields/Is_Lost__c.field-meta.xml
<CustomField>
    <fullName>Is_Lost__c</fullName>
    <formula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLost</label>
    <type>Checkbox</type>
</CustomField>