src/objects/Opportunity/fields/Is_this_billable__c.field-meta.xml
<CustomField>
    <fullName>Is_this_billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this billable?</label>
    <type>Checkbox</type>
</CustomField>