src/objects/Opportunity/fields/IsAccepted1__c.field-meta.xml
<CustomField>
    <fullName>IsAccepted1__c</fullName>
    <formula>NOT( ISBLANK( AE_Accepted_Date__c ))</formula>
    <label>IsAccepted</label>
    <type>Checkbox</type>
</CustomField>