src/objects/Opportunity/fields/IsDemo__c.field-meta.xml
<CustomField>
    <fullName>IsDemo__c</fullName>
    <formula>NOT( ISBLANK(   Stage_1_Demo_Date__c   ))</formula>
    <label>IsDemo</label>
    <type>Checkbox</type>
</CustomField>