src/objects/Opportunity/fields/IsDemoScheduled__c.field-meta.xml
<CustomField>
    <fullName>IsDemoScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDemoScheduled</label>
    <type>Checkbox</type>
</CustomField>