src/objects/Opportunity/fields/IsEvaluation__c.field-meta.xml
<CustomField>
    <fullName>IsEvaluation__c</fullName>
    <formula>NOT( ISBLANK(  Stage_2_Evaluation_Date__c  ))</formula>
    <label>IsEvaluation</label>
    <type>Checkbox</type>
</CustomField>