src/objects/Opportunity/fields/IsNegotation__c.field-meta.xml
<CustomField>
    <fullName>IsNegotation__c</fullName>
    <formula>NOT( ISBLANK(  Stage_3_Negotiation_Date__c  ))</formula>
    <label>IsNegotation</label>
    <type>Checkbox</type>
</CustomField>