src/objects/Opportunity/fields/IsPreOppty__c.field-meta.xml
<CustomField>
    <fullName>IsPreOppty__c</fullName>
    <formula>NOT(
  ISBLANK( PreOpptyDate__c )
)</formula>
    <label>IsPreOppty</label>
    <type>Checkbox</type>
</CustomField>