src/objects/Opportunity/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <formula>ISPICKVAL(StageName, &quot;Closed Won&quot;)</formula>
    <label>IsWon</label>
    <type>Checkbox</type>
</CustomField>