src/objects/Opportunity/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <inlineHelpText>What is the main function of the person you are demoing/main point of contact? Are they the main decision maker?</inlineHelpText>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT Staff</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Owner / Operator</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Vice President / COO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>