src/objects/Opportunity/fields/Lobster_Basic_Target__c.field-meta.xml
<CustomField>
    <fullName>Lobster_Basic_Target__c</fullName>
    <formula>CASE(MONTH(CloseDate),
1, 1750,
2, 2000,
3, 2250, 
4, 2000, 
5, 2250, 
6, 2500,
7, 2250,
8, 2750,
9, 3000,
10, 3250,
11, 3750,
12, 4000,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lobster Basic/Advanced Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>