src/objects/Opportunity/fields/Lobster_Conga_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Lobster_Conga_Template_ID__c</fullName>
    <formula>CASE(Member_Type__c,
&quot;Basic Member&quot;, &quot;a0Hf40000058QZQ&quot;,
&quot;Advanced Member&quot;, &quot;a0Hf40000058QZV &quot; ,
&quot;Premium Member&quot;, &quot;a0Hf40000058QZa&quot;,
&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lobster Conga Template ID</label>
    <type>Text</type>
</CustomField>