src/objects/Opportunity/fields/Lobster_Premium_Target__c.field-meta.xml
<CustomField>
    <fullName>Lobster_Premium_Target__c</fullName>
    <formula>CASE(MONTH(CloseDate),
1, 6400,
2, 6400,
3, 3200, 
4, 3200, 
5, 3200, 
6, 3200,
7, 3200,
8, 3200,
9, 6400,
10, 6400,
11, 6400,
12, 9600,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lobster Premium Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>