src/objects/Opportunity/fields/Loss_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Loss_Cycle__c</fullName>
    <formula>IF(Is_Lost__c, 
Loss_Date__c  - AE_Accepted_Date__c, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>