src/objects/Opportunity/fields/Loss_Date__c.field-meta.xml
<CustomField>
    <fullName>Loss_Date__c</fullName>
    <inlineHelpText>What date did you mark the opportunity as Closed: Deal Lost?</inlineHelpText>
    <label>Loss Date</label>
    <type>Date</type>
</CustomField>