src/objects/Opportunity/fields/Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Detail__c</fullName>
    <inlineHelpText>Detailed account of why the deal was lost.</inlineHelpText>
    <label>Lost Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>