src/objects/Opportunity/fields/Lost_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lost_Stage__c</fullName>
    <label>Lost Stage</label>
    <length>55</length>
    <type>Text</type>
</CustomField>