src/objects/Opportunity/fields/Major_Metro_City__c.field-meta.xml
<CustomField>
    <fullName>Major_Metro_City__c</fullName>
    <inlineHelpText>Mapped from converted Lead.</inlineHelpText>
    <label>Major Metro City</label>
    <type>TextArea</type>
</CustomField>