src/objects/Opportunity/fields/Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget__c</fullName>
    <inlineHelpText>Mapped from converted Lead.</inlineHelpText>
    <label>Marketing Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>