src/objects/Opportunity/fields/Marketing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cycle__c</fullName>
    <formula>PreOpptyDate__c -  MQL_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>