src/objects/Opportunity/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Member</fullName>
                <label>Starter Member</label>
            </value>
            <value>
                <fullName>Business Member</fullName>
            </value>
            <value>
                <fullName>Advanced Member</fullName>
            </value>
            <value>
                <fullName>Premium Member</fullName>
            </value>
            <value>
                <fullName>Local SEO</fullName>
            </value>
            <value>
                <fullName>Non-Member with Services</fullName>
            </value>
            <value>
                <fullName>Non-member</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Site Hosting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>