src/objects/Opportunity/fields/Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account__c</fullName>
    <label>Merchant Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worldpay</fullName>
            </value>
            <value>
                <fullName>Iroquois</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Merchant Account</fullName>
            </value>
            <value>
                <fullName>To Be Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>