src/objects/Opportunity/fields/Mktg_Closed_Won_Target__c.field-meta.xml
<CustomField>
    <fullName>Mktg_Closed_Won_Target__c</fullName>
    <formula>CASE(MONTH(CloseDate),
1, 21,
2, 28,
3, 38, 
4, 28, 
5, 21, 
6, 23,
7, 26,
8, 32,
9, 43,
10, 51,
11, 60,
12, 64,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mktg Closed Won Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>