src/objects/Opportunity/fields/Mktg_MRR_Target__c.field-meta.xml
<CustomField>
    <fullName>Mktg_MRR_Target__c</fullName>
    <formula>CASE(MONTH(CloseDate),
1, 6000,
2, 7800,
3, 10800, 
4, 7800, 
5, 4000, 
6, 4400,
7, 4800,
8, 6000,
9, 12000,
10, 14400,
11, 16800,
12, 18000,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mktg MRR Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>