src/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>The sum of all recurring products per month.</description>
    <inlineHelpText>The sum of all recurring products per month.</inlineHelpText>
    <label>MRR</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Recurring_Revenue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>