src/objects/Opportunity/fields/Net_MRR__c.field-meta.xml
<CustomField>
    <fullName>Net_MRR__c</fullName>
    <inlineHelpText>Difference between previous contract MRR and new contract MRR</inlineHelpText>
    <label>Net MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>