src/objects/Opportunity/fields/Number_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customers__c</fullName>
    <inlineHelpText>Estimated number of customers the company handles per year.</inlineHelpText>
    <label># of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>