src/objects/Opportunity/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <inlineHelpText>How many locations or franchises does the company have?</inlineHelpText>
    <label># of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>