src/objects/Opportunity/fields/Number_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunities__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>