src/objects/Opportunity/fields/Number_of_Service_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Locations__c</fullName>
    <inlineHelpText>Mapped from converted Lead.</inlineHelpText>
    <label>Number of Service Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>