src/objects/Opportunity/fields/Number_of_Services_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services_Month__c</fullName>
    <label># of Services/Mo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>