src/objects/Opportunity/fields/of_Lobster_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Lobster_Products__c</fullName>
    <label># of Lobster Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Brand__c</field>
        <operation>equals</operation>
        <value>Lobster Marketing</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>