src/objects/Opportunity/fields/of_Membership_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Membership_Products__c</fullName>
    <inlineHelpText>Counts the number of Membership-related products added to the Opportunity.</inlineHelpText>
    <label># of Membership Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Membership_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>