src/objects/Opportunity/fields/One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fees__c</fullName>
    <description>The sum of all one-time fees on the opportunity.</description>
    <inlineHelpText>Set up fees and fees from custom contracts</inlineHelpText>
    <label>One-Time Fees</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.One_Time_Revenue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>