src/objects/Opportunity/fields/Original_source_drill_down_1__c.field-meta.xml
<CustomField>
    <fullName>Original_source_drill_down_1__c</fullName>
    <label>Original source drill-down 1</label>
    <length>155</length>
    <type>Text</type>
</CustomField>