src/objects/Opportunity/fields/Other_note_reason__c.field-meta.xml
<CustomField>
    <fullName>Other_note_reason__c</fullName>
    <inlineHelpText>Mapped from converted Lead.</inlineHelpText>
    <label>Other - note reason</label>
    <type>TextArea</type>
</CustomField>