src/objects/Opportunity/fields/PR_Closed_Won_Target__c.field-meta.xml
<CustomField>
    <fullName>PR_Closed_Won_Target__c</fullName>
    <formula>CASE(MONTH(CloseDate),
1, 35,
2, 46,
3, 64, 
4, 46, 
5, 35, 
6, 39,
7, 43,
8, 53,
9, 71,
10, 85,
11, 99,
12, 106,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Closed Won Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>