src/objects/Opportunity/fields/PR_MRR_Target__c.field-meta.xml
<CustomField>
    <fullName>PR_MRR_Target__c</fullName>
    <formula>CASE(MONTH(CloseDate),
1, 10000,
2, 13000,
3, 18000, 
4, 13000, 
5, 10000, 
6, 11000,
7, 12000,
8, 15000,
9, 20000,
10, 24000,
11, 28000,
12, 30000,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR MRR Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>