src/objects/Opportunity/fields/PreOpptyDate__c.field-meta.xml
<CustomField>
    <fullName>PreOpptyDate__c</fullName>
    <label>Pre-Oppty Date</label>
    <type>Date</type>
</CustomField>