src/objects/Opportunity/fields/Primary_Competitor_List__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor_List__c</fullName>
    <label>Primary Competitor List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;K Systems</fullName>
            </value>
            <value>
                <fullName>Briostack</fullName>
            </value>
            <value>
                <fullName>Custom Software</fullName>
            </value>
            <value>
                <fullName>Fieldworks HQ</fullName>
            </value>
            <value>
                <fullName>Gorilladesk</fullName>
            </value>
            <value>
                <fullName>HouseCallPro</fullName>
            </value>
            <value>
                <fullName>PestPac</fullName>
            </value>
            <value>
                <fullName>Pocomos</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>RDF Software</fullName>
            </value>
            <value>
                <fullName>RealGreen</fullName>
            </value>
            <value>
                <fullName>Service Auto Pilot</fullName>
            </value>
            <value>
                <fullName>ServicePro</fullName>
            </value>
            <value>
                <fullName>ServSuite</fullName>
            </value>
            <value>
                <fullName>SmartService</fullName>
            </value>
            <value>
                <fullName>SPCS</fullName>
            </value>
            <value>
                <fullName>WorkWave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>