src/objects/Opportunity/fields/Primary_Pain__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pain__c</fullName>
    <inlineHelpText>The main issue that a lead has with their current software or the main issue they&#39;re experiencing by not having a software.</inlineHelpText>
    <label>Primary Pain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>