src/objects/Opportunity/fields/Primary_SEO_Focus__c.field-meta.xml
<CustomField>
    <fullName>Primary_SEO_Focus__c</fullName>
    <label>Primary SEO Focus</label>
    <type>TextArea</type>
</CustomField>