src/objects/Opportunity/fields/Products_Added__c.field-meta.xml
<CustomField>
    <fullName>Products_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did you add your product(s) to this opportunity? Required if you want to mark it as Closed Won!</inlineHelpText>
    <label>Products Added</label>
    <type>Checkbox</type>
</CustomField>